# sudoSolv

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  TODO.md
GRIDS/: 1.txt  12.txt  13.txt  18.txt  19.txt  2.txt  3.txt  6.txt  999.txt
assets-cg/: fxconv-metadata.txt
grids/: 10.txt  11.txt  111.txt  1111.txt  1112.txt  14.txt  15.txt  16.txt  17.txt  31.txt  4.txt  5.txt  7.txt  8.txt  9.txt  998.txt
src/: consts.h  element.cpp  element.h  grids.cpp  grids.h  main.cpp  menu.h  menus.h  position.cpp  position.h  sudoSolv.cpp  sudoSolver.cpp  sudoSolver.h  sudoku.cpp  sudoku.h  sudokuShuffler.cpp  sudokuShuffler.h  tinySquare.cpp  tinySquare.h
src/shared/: bFile.cpp  bFile.h  casioCalcs.h  keyboard.cpp  keyboard.h  locals.h  menuBar.cpp  menuBar.h  scrCapture.cpp  scrCapture.h  trace.h  window.cpp  window.h
